2003-07-02  Mark McLoughlin  <mark@skynet.ie>

	Handle crashes of the thumbnailer child process a
	little more gracefully.

	* theme-thumbnail.c:
	(generate_theme_thumbnail): if we get an EOF from
	the child close the pipe, return NULL and return
	NULL from any subsequent calls.
	(generate_theme_thumbnail_async): return NULL if
	the pipe has been closed.
	(theme_thumbnail_factory_init): set pipe descriptos
	to zero after closing them.

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-13  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: build fixes for the below
	* gnome-theme-apply.c: pulled out from gnome-theme-manager.c
	* gnome-theme-apply.h: pulled out from gnome-theme-manager.c
	* theme-thumbnail.c: moved to libcommon
	* theme-thumbnail.h: moved to libcommon

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-01  Ross Burton  <ross@burtonini.com>

	* gnome-theme-info.c (real_add_top_theme_dir_monitor):
	Monitor directories and symbolic links instead of just
	directories. Fixes #111990.

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf-property-editor.c: (gconf_peditor_new): Plug a leak
	* gnome-theme-info.c: (top_theme_dir_changed),
	(top_icon_theme_dir_changed), (real_add_top_theme_dir_monitor):
	Plug leaks and fix invalid reads reported by valgrind.

2003-03-27  Andrew Sobala  <aes@gnome.org>

	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
	(update_common_theme_dir_index):
	s/read_meta_theme/gnome_theme_read_meta_theme/; enable the reading of
	themes that just use [X-GNOME-Metatheme] without pretending to be a
	.desktop file
	* gnome-theme-info.h: exposed gnome_theme_read_meta_theme

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

2003-02-03  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-info.c (read_meta_theme): Fix a glaring bug
	that caused the theme descriptions etc not to be localised.
	Fix from Dmitry G. Mastrukov <dmitry@taurussoft.org>. Fixes
	#104296
	