@@ -1,3 +1,8 @@
+2003-07-03  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gconf-property-editor.c: (gconf_property_editor_finalize):
+	Merge Anders' fix from stable.
+
 2003-07-02  Mark McLoughlin  <mark@skynet.ie>
 
 	Handle crashes of the thumbnailer child process a
